[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codux"
version = "1.0.0"
description = "Run code quickly and safely"
authors = [
    { name = "Frederic Rohrer", email = "pypi@fredsemails.com" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.0.0",
    "websockets>=10.0.0",
    "dataclasses; python_version < '3.7'"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=1.0.0"  # for type checking
]

[project.urls]
Homepage = "https://github.com/frohrer/codux-python"